# calamares-netprivacy

./: CMakeLists.txt  NetPrivacyJob.cpp  NetPrivacyJob.h  NetPrivacyViewStep.cpp  NetPrivacyViewStep.h  README.md  View.qml  module.desc  netprivacy.conf  netprivacy.qrc  test_vm.sh
